--- a/docker/stacks/grocy/compose.yaml
+++ b/docker/stacks/grocy/compose.yaml
@@ -11,9 +11,9 @@ services:
     volumes:
       - /srv/application_data/grocy/app/config:/config
     environment:
-      - PUID=${UID:-1000}
-      - PGID=${GID:-1000}
-      - TZ=${TIMEZONE}
+      PUID: ${UID:-1000}
+      PGID: ${GID:-1000}
+      TZ: ${TIMEZONE}
     labels:
       diun.enable: "true"
       traefik.enable: "true"
