--- a/docker/stacks/ntfy/compose.yaml
+++ b/docker/stacks/ntfy/compose.yaml
@@ -15,7 +15,7 @@ services:
       - /srv/application_data/ntfy/app/cache:/var/cache/ntfy
       - /srv/application_data/ntfy/app/etc:/etc/ntfy
     environment:
-      - TZ=${TIMEZONE}    # optional: set desired timezone
+      TZ: ${TIMEZONE}    # optional: set desired timezone
     healthcheck: # optional: remember to adapt the host:port to your environment
         test: ["CMD-SHELL", "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1"]
         interval: 60s
