--- a/docker/stacks/stirlingpdf/compose.yaml
+++ b/docker/stacks/stirlingpdf/compose.yaml
@@ -7,8 +7,8 @@ services:
     container_name: stirlingpdf
     restart: unless-stopped
     environment:
-      - DOCKER_ENABLE_SECURITY=${DOCKER_ENABLE_SECURITY:-false}
-      - LANGS=${LANGS:-en_GB}
+      DOCKER_ENABLE_SECURITY: ${DOCKER_ENABLE_SECURITY:-false}
+      LANGS: ${LANGS:-en_GB}
     networks:
       - proxy_private
     volumes:
