diun: Disable debug logging

--- a/docker/stacks/diun/compose.yaml
+++ b/docker/stacks/diun/compose.yaml
@@ -9,8 +9,8 @@ services:
     environment:
       TZ: ${TIMEZONE}
  
-      LOG_LEVEL: debug
-      LOG_JSON: false
+      # LOG_LEVEL: debug
+      # LOG_JSON: false
 
       CONFIG: /data/diun.yaml
       DIUN_WATCH_WORKERS: 20
