--- a/docker/stacks/diun/komodo.toml
+++ b/docker/stacks/diun/komodo.toml
@@ -20,4 +20,7 @@ TIMEZONE=[[TIMEZONE]]
 
 # NTFY_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
+
+DOCKERIO_USER=[[DIUN_DOCKERIO_USER]]
+DOCKERIO_PASS=[[DIUN_DOCKERIO_TOKEN]]
 """
