diun: switch to include tags, only latest, as this should only track main releases

--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -1,43 +1,3 @@
 defaults:
-  excludeTags:
-    - .*-alpha\..*
-    - alpine-sts
-    - amd64-.*
-    - .*-amd64
-    - .*-amd64-.*
-    - arm64-.*
-    - .*-arm-.*
-    - .*-arm64-.*
-    - .*-arm64
-    - .*-arm64v8
-    - arm64v8-.*
-    - .*-armnn
-    - .*-armv6
-    - .*-armv7
-    - .*-beta\..*
-    - commit-.*
-    - dependabot-.*
-    - dev
-    - develop
-    - develop-.*
-    - .*-develop
-    - .*-develop-.*
-    - development.*
-    - edge
-    - feat-.*
-    - feature-.*
-    - fix-.*
-    - fix-issue-.*
-    - improvement_
-    - nightly
-    - nightly-.*
-    - .*-nightly
-    - .*-nightly-rootless
-    - .*-ppc64le
-    - .*-ppc64le-.*
-    - pr-.*
-    - .*-rknn
-    - sha.*
-    - .*-slim
-    - sts
-    - .*-windows.*
+  includeTags:
+    - latest
