github-pages: Fix incorrect volume path

--- a/docker/stacks/github-pages/compose.yaml
+++ b/docker/stacks/github-pages/compose.yaml
@@ -9,7 +9,7 @@ services:
     networks:
       - proxy_private
     volumes:
-      - /srv/repositories/jekotia.github.io:/site
+      - /srv/repositories/jekotia.github.io:/src/site
     labels:
       # diun.enable: "true"
       traefik.enable: "true"
