--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -4,3 +4,45 @@ defaults:
     - update
   includeTags:
     - ^latest$
+  excludeTags:
+    - .*-alpha\..*
+    - alpine-sts
+    - amd64-.*
+    - .*-amd64
+    - .*-amd64-.*
+    - arm64-.*
+    - .*-arm-.*
+    - .*-arm64-.*
+    - .*-arm64
+    - .*-arm64v8
+    - arm64v8-.*
+    - .*-armnn
+    - .*-armv6
+    - .*-armv7
+    - .*-beta\..*
+    - commit-.*
+    - dependabot-.*
+    - dev
+    - develop
+    - develop-.*
+    - .*-develop
+    - .*-develop-.*
+    - development.*
+    - edge
+    - feat-.*
+    - feature-.*
+    - fix-.*
+    - fix-issue-.*
+    - improvement_
+    - nightly
+    - nightly-.*
+    - .*-nightly
+    - .*-nightly-rootless
+    - .*-ppc64le
+    - .*-ppc64le-.*
+    - pr-.*
+    - .*-rknn
+    - sha.*
+    - .*-slim
+    - sts
+    - .*-windows.*
