--- a/bootstrap/hyperion/.env.example
+++ b/bootstrap/hyperion/.env.example
@@ -9,5 +9,5 @@ KOMODO_DB_PASSWORD=
 ## traefik
 SECRETS_CLOUDFLARE_EMAIL=
 SECRETS_CLOUDFLARE_API_KEY=
-TRAEFIK_UID=1000
-TRAEFIK_GID=1000
+# TRAEFIK_UID=
+# TRAEFIK_GID=
