--- a/bootstrap/hyperion/komodo/mongo.yaml
+++ b/bootstrap/hyperion/komodo/mongo.yaml
@@ -14,8 +14,8 @@ services:
       - /srv/application_data/bootstrap/komodo/mongo/data:/data/db
       - /srv/application_data/bootstrap/komodo/mongo/config:/data/configdb
     env_file:
-      - komodo.env
-      - komodo.secrets.env
+      - .env
+      - secrets.env
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${KOMODO_DB_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${KOMODO_DB_PASSWORD}
