bootstrap, hyperion: re-organise traefik. Implement authentik for proxy forwardAuth.

--- a/bootstrap/hyperion/.env.example
+++ b/bootstrap/hyperion/.env.example
@@ -11,3 +11,7 @@ SECRETS_CLOUDFLARE_EMAIL=
 SECRETS_CLOUDFLARE_API_KEY=
 # TRAEFIK_UID=
 # TRAEFIK_GID=
+
+## authentik
+PG_PASS=
+AUTHENTIK_SECRET_KEY=
