--- a/bootstrap/hyperion/traefik/traefik.yaml
+++ b/bootstrap/hyperion/traefik/traefik.yaml
@@ -97,7 +97,7 @@ services:
     volumes:
       - /srv/application_data/bootstrap/traefik/acme:/acme:rw # cert location - you must touch this file and change perms to 600 when creating
       - ./rules:/rules:ro  # file provider directory
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      # - /var/run/docker.sock:/var/run/docker.sock:ro
       - /srv/application_data/bootstrap/traefik/traefik.log:/var/log/docker/traefik.log:rw # for fail2ban - make sure to touch file before starting container
     environment:
       CF_DNS_API_TOKEN: ${SECRETS_CLOUDFLARE_API_KEY}
@@ -113,6 +113,7 @@ services:
       traefik.http.routers.dashboard.service: api@internal
       traefik.http.routers.dashboard.tls: "true"
       traefik.http.routers.dashboard.tls.certresolver: dns-cloudflare # Comment out this line after first run of traefik to force the use of wildcard certs
+      traefik.http.routers.dashboard.middlewares: forwardAuth-authentik@file
       ### Broad certs
       traefik.http.routers.dashboard.tls.domains[0].main: ${NETWORK_DOMAIN}
       traefik.http.routers.dashboard.tls.domains[0].sans: '*.${NETWORK_DOMAIN}'
@@ -145,20 +146,3 @@ services:
 #      traefik.http.middlewares.traefik-headers.headers.referrerpolicy: same-origin
 #      traefik.http.middlewares.traefik-headers.headers.featurepolicy: camera 'none'; geolocation 'none'; microphone 'none'; payment 'none'; usb 'none'; vr 'none';
 #      traefik.http.middlewares.traefik-headers.headers.customresponseheaders.X-Robots-Tag: none,noarchive,nosnippet,notranslate,noimageindex,
-
-  traefik.dockerproxy:
-    image: ghcr.io/tecnativa/docker-socket-proxy:latest
-    container_name: traefik.dockerproxy
-    environment:
-      CONTAINERS: 1 # Allow access to viewing containers
-      POST: 0 # Disallow any POST operations (effectively read-only)
-    networks:
-      - traefik.dockerproxy
-    # ports:
-    #   - 2375:2375
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
-    restart: always
-
-networks:
-  traefik.dockerproxy:
