--- a/docker/stacks/grocy/compose.yaml
+++ b/docker/stacks/grocy/compose.yaml
@@ -21,6 +21,7 @@ services:
       traefik.http.routers.grocy.entrypoints: websecure
       traefik.http.routers.grocy.rule: Host(`${GROCY_URL_PREFIX:-grocy.}${NETWORK_DOMAIN}`)
       traefik.http.routers.grocy.tls.certresolver: dns-cloudflare
+      traefik.http.routers.grocy.middlewares: forwardAuth-authentik@file
       # Frontend => Services
       traefik.http.routers.grocy.service: grocy
       traefik.http.services.grocy.loadbalancer.server.port: 80
