--- a/docker/stacks/karakeep/komodo.toml
+++ b/docker/stacks/karakeep/komodo.toml
@@ -28,5 +28,7 @@ NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 NEXTAUTH_SECRET=[[KARAKEEP_NEXTAUTH_SECRET]]
 MEILI_MASTER_KEY=[[KARAKEEP_MEILI_MASTER_KEY]]
-# NEXTAUTH_URL=
+
+OAUTH_CLIENT_ID=[[KARAKEEP_AUTHENTIK_OAUTH_ID]]
+OAUTH_CLIENT_SECRET=[[KARAKEEP_AUTHENTIK_OAUTH_SECRET]]
 """
