navidrome: disable forwardAuth until I figure out how to have Enceladus services authenticate against Hyperion

--- a/docker/stacks/navidrome/compose.yaml
+++ b/docker/stacks/navidrome/compose.yaml
@@ -13,8 +13,8 @@ services:
       ND_DATAFOLDER: /data
       ND_MUSICFOLDER: /music
       ND_BASEURL: https://${NAVIDROME_URL_PREFIX:-navidrome.}${NETWORK_DOMAIN}
-      ND_REVERSEPROXYUSERHEADER: "X-authentik-username"
-      ND_REVERSEPROXYWHITELIST: 0.0.0.0/0 # This is safe because Navidrome is ONLY reachable internally, via the proxy_private network
+      # ND_REVERSEPROXYUSERHEADER: "X-authentik-username"
+      # ND_REVERSEPROXYWHITELIST: 0.0.0.0/0 # This is safe because Navidrome is ONLY reachable internally, via the proxy_private network
     volumes:
     - "/mnt/storage/application_data/navidrome/app/data:/data"
     - "/mnt/storage/multimedia/music:/music:ro"
@@ -25,7 +25,7 @@ services:
       traefik.http.routers.navidrome.entrypoints: websecure
       traefik.http.routers.navidrome.rule: Host(`${NAVIDROME_URL_PREFIX:-navidrome.}${NETWORK_DOMAIN}`)
       traefik.http.routers.navidrome.tls.certresolver: dns-cloudflare
-      traefik.http.routers.navidrome.middlewares: forwardAuth-authentik@file
+      # traefik.http.routers.navidrome.middlewares: forwardAuth-authentik@file
       # Frontend => Services
       traefik.http.routers.navidrome.service: navidrome
       traefik.http.services.navidrome.loadbalancer.server.port: 4533
