--- a/docker/stacks/core-enceladus/traefik/rules/middleswares-forwardAuth-authentik.yaml
+++ b/docker/stacks/core-enceladus/traefik/rules/middleswares-forwardAuth-authentik.yaml
@@ -14,7 +14,7 @@ http:
     # https://github.com/goauthentik/authentik/issues/2366
     forwardAuth-authentik:
       forwardAuth:
-        address: "https://auth.jekotia.net/outpost.goauthentik.io/auth/traefik"
+        address: "http://authentik.outpost:9000/outpost.goauthentik.io/auth/traefik"
         trustForwardHeader: true
         authResponseHeaders:
           - X-authentik-username
