core-enceladus: forgot to add whoami to stack *facepalm*

--- a/docker/stacks/core-enceladus/komodo.toml
+++ b/docker/stacks/core-enceladus/komodo.toml
@@ -18,6 +18,7 @@ file_paths = [
   "compose.yaml",
   "portainer.yaml",
   "traefik.yaml",
+  "whoami.yaml",
   "../../networks/proxy_private.yaml"
 ]
 environment = """
