--- a/docker/stacks/paperless/komodo.toml
+++ b/docker/stacks/paperless/komodo.toml
@@ -32,6 +32,10 @@ NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 # POSTGRES_USER=
 POSTGRES_PASSWORD=[[PAPERLESS_POSTGRES_PASSWORD]]
 
+AUTHENTIK_OAUTH_ID=[[PAPERLESS_AUTHENTIK_OAUTH_ID]]
+AUTHENTIK_OAUTH_SECRET=[[PAPERLESS_AUTHENTIK_OAUTH_SECRET]]
+# AUTHENTIK_SLUG=
+
 PAPERLESS_SMB_HOST=[[PAPERLESS_SMB_HOST]]
 PAPERLESS_SMB_USER=[[PAPERLESS_SMB_USER]]
 PAPERLESS_SMB_PASS=[[PAPERLESS_SMB_PASS]]
