--- a/bootstrap/hyperion/.env.example
+++ b/bootstrap/hyperion/.env.example
@@ -15,3 +15,18 @@ SECRETS_CLOUDFLARE_API_KEY=
 ## authentik
 PG_PASS=
 AUTHENTIK_SECRET_KEY=
+# https://www.reddit.com/r/selfhosted/comments/10c6w7j/notes_about_email_setup_with_authentik/
+# SMTP Host Emails are sent to
+AUTHENTIK_EMAIL__HOST=localhost
+AUTHENTIK_EMAIL__PORT=25
+# Optionally authenticate (don't add quotation marks to your password)
+AUTHENTIK_EMAIL__USERNAME=
+AUTHENTIK_EMAIL__PASSWORD=
+# Use StartTLS
+AUTHENTIK_EMAIL__USE_TLS=false
+# Use SSL
+AUTHENTIK_EMAIL__USE_SSL=false
+AUTHENTIK_EMAIL__TIMEOUT=10
+# Email address authentik will send from, should have a correct @domain
+AUTHENTIK_EMAIL__FROM=authentik@localhost
+# to test: docker compose exec worker ak test_email [email address]
