--- a/docker/stacks/romm/komodo.toml
+++ b/docker/stacks/romm/komodo.toml
@@ -35,4 +35,8 @@ SCREENSCRAPER_PASSWORD=[[SCREENSCRAPER_PASSWORD]]
 # ROMM_DB_USER=
 ROMM_DB_PASS=[[ROMM_DB_PASS]]
 ROMM_DB_ROOT_PASS=[[ROMM_DB_ROOT_PASS]]
+
+OIDC_CLIENT_ID=[[ROMM_AUTHENTIK_ID]]
+OIDC_CLIENT_SECRET=[[ROMM_AUTHENTIK_SECRET]]
+# AUTHENTIK_SLUG=
 """
