--- a/docker/stacks/tdarr-server/komodo.toml
+++ b/docker/stacks/tdarr-server/komodo.toml
@@ -25,6 +25,7 @@ NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 TDARR_SERVER_IP=10.0.0.20
 TDARR_NODE_NAME=Hyperion
+API_KEY=[[TDARR_API_KEY]]
 
 MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
 MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
